# n_control

./: CMakeLists.txt  README.md  package.xml
launch/: n_control.launch  n_control.launch~
scripts/: Bebop_P3.py  Bebop_P3_support.py  GUI_Prueba.py  GUI_dotMEX.py  GUI_dotMEX.ui  GUI_dotMEXdrones.py  Rutina.py  Rutina_Bebop.py  Trayectoria.py  vision.py
scripts/05Bebop_4/: Bebop_P4.py  Bebop_P4_support.py  pos2.txt  posiciones.txt
src/: C_Vi.cpp  c_con.cpp  c_master.cpp  c_vaz.cpp  c_vx.cpp  c_vy.cpp  c_vz.cpp  i_data.cpp
